openshift/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: wasm

---
apiVersion: v1
kind: Namespace
metadata:
   name: wasi
