openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wasm
  namespace: wasm
  labels:
    app: wasm
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: theport
  selector:
    app: wasm

---
apiVersion: v1
kind: Service
metadata:
  name: wasi
  namespace: wasi
  labels:
    app: wasi
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: theport
  selector:
    app: wasi
